--- a/tests/cassettes/test_user_delete.yaml
+++ b/tests/cassettes/test_user_delete.yaml
@@ -20,19 +20,23 @@ interactions:
     uri: https://api.easypost.com/v2/users
   response:
     body:
-      string: '{"id": "user_d4027c145d80495294fc4df2c1edf7f1", "object": "User", "parent_id":
+      string: '{"id": "user_96f5c85622a34e6fba1a24b70d7cac9b", "object": "User", "parent_id":
         "user_54356a6b96c940d8913961a3c7b909f2", "name": "Test User", "phone_number":
-        "<REDACTED>", "verified": true, "created_at": "2022-08-15T18:52:49Z", "children":
-        "<REDACTED>", "api_keys": "<REDACTED>"}'
+        "<REDACTED>", "verified": true, "created_at": "2023-05-16T17:00:55Z", "default_carbon_offset":
+        false, "has_elevate_access": false, "children": [], "api_keys": [{"object":
+        "ApiKey", "key": "<REDACTED>", "mode": "test", "created_at": "2023-05-16T17:00:55Z",
+        "active": true, "id": "ak_e11f2cd9b9cd42e9ac388091d27404db"}, {"object": "ApiKey",
+        "key": "<REDACTED>", "mode": "production", "created_at": "2023-05-16T17:00:55Z",
+        "active": true, "id": "ak_d6beedb898af426880e2af148d3993fb"}]}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '634'
+      - '691'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"5a53e28089f112f4c26bca846fd6a8da"
+      - W/"847204556f926562bba422da6cf722a2"
       expires:
       - '0'
       pragma:
@@ -50,20 +54,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa9600e79a7e240026394f
+      - de846e086463b6c7e7874081002d8b71
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb4nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.729615'
+      - '0.827802'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305161623-0a285b6b1b-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -85,7 +89,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: DELETE
-    uri: https://api.easypost.com/v2/users/user_d4027c145d80495294fc4df2c1edf7f1
+    uri: https://api.easypost.com/v2/users/user_96f5c85622a34e6fba1a24b70d7cac9b
   response:
     body:
       string: ''
@@ -107,20 +111,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa9601e79a7e240026399b
+      - de846e086463b6c8e7874081002d8bed
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb9nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.124107'
+      - '0.121275'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305161623-0a285b6b1b-master
       x-xss-protection:
       - 1; mode=block
     status:
