--- a/tests/cassettes/test_user_update.yaml
+++ b/tests/cassettes/test_user_update.yaml
@@ -18,20 +18,21 @@ interactions:
     body:
       string: '{"id": "user_54356a6b96c940d8913961a3c7b909f2", "object": "User", "parent_id":
         null, "name": "EasyPost Python Client Library Tests", "phone_number": "<REDACTED>",
-        "verified": true, "created_at": "2017-03-01T03:01:34Z", "balance": "0.00000",
-        "price_per_shipment": "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount":
-        "100.00", "recharge_threshold": "0.00", "has_billing_method": false, "cc_fee_rate":
+        "verified": true, "created_at": "2017-03-01T03:01:34Z", "default_carbon_offset":
+        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount": "100.00",
+        "recharge_threshold": "0.00", "has_billing_method": false, "cc_fee_rate":
         "0.03", "default_insurance_amount": null, "insurance_fee_rate": "0.01", "insurance_fee_minimum":
-        "1.00", "email": "<REDACTED>", "children": "<REDACTED>"}'
+        "1.00", "email": "<REDACTED>", "children": []}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '8081'
+      - '601'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"93d966ca847a2ef598ea9d7bd07bb1ee"
+      - W/"37fad0de2fa69ce547baa7b7ecd8f745"
       expires:
       - '0'
       pragma:
@@ -49,7 +50,7 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa95ffe79a7e23002638f3
+      - 23bee7e46463b756e787443c002a4014
       x-frame-options:
       - SAMEORIGIN
       x-node:
@@ -57,19 +58,19 @@ interactions:
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.327180'
+      - '0.031681'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305161623-0a285b6b1b-master
       x-xss-protection:
       - 1; mode=block
     status:
       code: 200
       message: OK
 - request:
-    body: '{"user": {"phone": "5555555555"}}'
+    body: '{"user": {"name": "New Name"}}'
     headers:
       Accept:
       - '*/*'
@@ -78,7 +79,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '33'
+      - '30'
       Content-Type:
       - application/json
       authorization:
@@ -90,21 +91,22 @@ interactions:
   response:
     body:
       string: '{"id": "user_54356a6b96c940d8913961a3c7b909f2", "object": "User", "parent_id":
-        null, "name": "EasyPost Python Client Library Tests", "phone_number": "<REDACTED>",
-        "verified": true, "created_at": "2017-03-01T03:01:34Z", "balance": "0.00000",
-        "price_per_shipment": "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount":
-        "100.00", "recharge_threshold": "0.00", "has_billing_method": false, "cc_fee_rate":
-        "0.03", "default_insurance_amount": null, "insurance_fee_rate": "0.01", "insurance_fee_minimum":
-        "1.00", "email": "<REDACTED>", "children": "<REDACTED>"}'
+        null, "name": "New Name", "phone_number": "<REDACTED>", "verified": true,
+        "created_at": "2017-03-01T03:01:34Z", "default_carbon_offset": false, "has_elevate_access":
+        false, "balance": "0.00000", "price_per_shipment": "0.00000", "recharge_amount":
+        "100.00", "secondary_recharge_amount": "100.00", "recharge_threshold": "0.00",
+        "has_billing_method": false, "cc_fee_rate": "0.03", "default_insurance_amount":
+        null, "insurance_fee_rate": "0.01", "insurance_fee_minimum": "1.00", "email":
+        "<REDACTED>", "children": []}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '8081'
+      - '573'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"93d966ca847a2ef598ea9d7bd07bb1ee"
+      - W/"4d7e243262cf39546f0f5363c1c1e8e0"
       expires:
       - '0'
       pragma:
@@ -122,7 +124,7 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa9600e79a7e2300263918
+      - 23bee7e46463b756e787443c002a4022
       x-frame-options:
       - SAMEORIGIN
       x-node:
@@ -130,12 +132,12 @@ interactions:
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.407869'
+      - '0.215579'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305161623-0a285b6b1b-master
       x-xss-protection:
       - 1; mode=block
     status:
