--- a/tests/cassettes/test_user_update_brand.yaml
+++ b/tests/cassettes/test_user_update_brand.yaml
@@ -18,20 +18,21 @@ interactions:
     body:
       string: '{"id": "user_54356a6b96c940d8913961a3c7b909f2", "object": "User", "parent_id":
         null, "name": "EasyPost Python Client Library Tests", "phone_number": "<REDACTED>",
-        "verified": true, "created_at": "2017-03-01T03:01:34Z", "balance": "0.00000",
-        "price_per_shipment": "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount":
-        "100.00", "recharge_threshold": "0.00", "has_billing_method": false, "cc_fee_rate":
+        "verified": true, "created_at": "2017-03-01T03:01:34Z", "default_carbon_offset":
+        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount": "100.00",
+        "recharge_threshold": "0.00", "has_billing_method": false, "cc_fee_rate":
         "0.03", "default_insurance_amount": null, "insurance_fee_rate": "0.01", "insurance_fee_minimum":
-        "1.00", "email": "<REDACTED>", "children": "<REDACTED>"}'
+        "1.00", "email": "<REDACTED>", "children": []}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '8081'
+      - '601'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"93d966ca847a2ef598ea9d7bd07bb1ee"
+      - W/"37fad0de2fa69ce547baa7b7ecd8f745"
       expires:
       - '0'
       pragma:
@@ -49,20 +50,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47962fa9603e79a7e2700263a4d
+      - de846e076463b6c9e787409d002d8c64
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.530688'
+      - '0.103212'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305161623-0a285b6b1b-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -90,7 +91,7 @@ interactions:
   response:
     body:
       string: '{"id": "brd_79967d34dc894866850bc8342c84dc41", "color": "#123456",
-        "logo": "https://assets.easypost.com/assets/images/branding/easypost-primary-logo-7a2cf535f2.svg",
+        "logo": "https://assets.easypost.com/assets/images/branding/easypost-primary-logo.7324aa54b64b34d6cd70ca5ba4d1842d.svg",
         "logo_href": "https://www.easypost.com", "name": "EasyPost", "ad": null, "ad_href":
         null, "object": "Brand", "user_id": "user_54356a6b96c940d8913961a3c7b909f2",
         "background_color": "#123456", "theme": "theme1"}'
@@ -98,11 +99,11 @@ interactions:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '355'
+      - '377'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"16e14a9b8a995c07e1759f6ca074db4d"
+      - W/"3ed4a169f34d67d2cd97fcacca1fbab0"
       expires:
       - '0'
       pragma:
@@ -120,20 +121,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47962fa9604e79a7e2700263a85
+      - de846e076463b6c9e787409d002d8c80
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb4nuq
+      - bigweb5nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.020552'
+      - '0.021203'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305161623-0a285b6b1b-master
       x-xss-protection:
       - 1; mode=block
     status:
