--- a/tests/cassettes/test_webhook_update.yaml
+++ b/tests/cassettes/test_webhook_update.yaml
@@ -20,8 +20,8 @@ interactions:
     uri: https://api.easypost.com/v2/webhooks
   response:
     body:
-      string: '{"id": "hook_78b5dac01ccb11ed942319ccc7ce1780", "object": "Webhook",
-        "mode": "test", "url": "http://example.com", "created_at": "2022-08-15T18:52:55Z",
+      string: '{"id": "hook_58f6b762f40d11ed9f8d43d6e343546b", "object": "Webhook",
+        "mode": "test", "url": "http://example.com", "created_at": "2023-05-16T17:16:08Z",
         "disabled_at": null}'
     headers:
       cache-control:
@@ -31,7 +31,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"b2a7369e861d7d2875a0d5d6aaec3379"
+      - W/"7514fb79d1a9b3bf25ce1826286c214b"
       expires:
       - '0'
       pragma:
@@ -49,27 +49,27 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47962fa9606e79a7e6600263b7e
+      - de846e066463ba58e78750fd002f555a
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.184313'
+      - '0.163981'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305161623-0a285b6b1b-master
       x-xss-protection:
       - 1; mode=block
     status:
       code: 201
       message: Created
 - request:
-    body: '{}'
+    body: '{"webhook": {}}'
     headers:
       Accept:
       - '*/*'
@@ -78,7 +78,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '2'
+      - '15'
       Content-Type:
       - application/json
       authorization:
@@ -86,11 +86,11 @@ interactions:
       user-agent:
       - <REDACTED>
     method: PATCH
-    uri: https://api.easypost.com/v2/webhooks/hook_78b5dac01ccb11ed942319ccc7ce1780
+    uri: https://api.easypost.com/v2/webhooks/hook_58f6b762f40d11ed9f8d43d6e343546b
   response:
     body:
-      string: '{"id": "hook_78b5dac01ccb11ed942319ccc7ce1780", "object": "Webhook",
-        "mode": "test", "url": "http://example.com", "created_at": "2022-08-15T18:52:55Z",
+      string: '{"id": "hook_58f6b762f40d11ed9f8d43d6e343546b", "object": "Webhook",
+        "mode": "test", "url": "http://example.com", "created_at": "2023-05-16T17:16:08Z",
         "disabled_at": null}'
     headers:
       cache-control:
@@ -100,7 +100,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"b2a7369e861d7d2875a0d5d6aaec3379"
+      - W/"7514fb79d1a9b3bf25ce1826286c214b"
       expires:
       - '0'
       pragma:
@@ -113,25 +113,27 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47962fa9606e79a7e6600263b9e
+      - de846e066463ba58e78750fd002f55a3
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb7nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.503034'
+      - '0.487077'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305161623-0a285b6b1b-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -153,7 +155,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: DELETE
-    uri: https://api.easypost.com/v2/webhooks/hook_78b5dac01ccb11ed942319ccc7ce1780
+    uri: https://api.easypost.com/v2/webhooks/hook_58f6b762f40d11ed9f8d43d6e343546b
   response:
     body:
       string: '{}'
@@ -183,20 +185,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47962fa9607e79a7e6600263be0
+      - de846e066463ba59e78750fd002f55fe
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.377557'
+      - '0.390016'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305161623-0a285b6b1b-master
       x-xss-protection:
       - 1; mode=block
     status:
