fix: partner tests

--- a/tests/cassettes/test_beta_referral_customer_refund_by_amount.yaml
+++ b/tests/cassettes/test_beta_referral_customer_refund_by_amount.yaml
@@ -44,28 +44,25 @@ interactions:
       - Origin
       x-backend:
       - easypost
-      x-canary:
-      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 477e8d8464626274e786c93e0019fe51
+      - 23bee7e16463d025e787d9a0003405cc
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb7nuq
+      - bigweb6nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq a29e4ad05c
-      - intlb1wdc a29e4ad05c
-      - extlb3wdc 5ab12a3ed2
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.536783'
+      - '0.504008'
       x-version-label:
-      - easypost-202305122104-29dd2d738a-master
+      - easypost-202305161731-3a88337a74-master
       x-xss-protection:
       - 1; mode=block
     status:
