--- a/tests/cassettes/test_beta_referral_customer_refund_by_payment_log.yaml
+++ b/tests/cassettes/test_beta_referral_customer_refund_by_payment_log.yaml
@@ -48,21 +48,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 477e8d7f64626275e786c93f0019febb
+      - 23bee7e36463d026e787d9a1003405fa
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - intlb2wdc a29e4ad05c
-      - extlb3wdc 5ab12a3ed2
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.036367'
+      - '0.037008'
       x-version-label:
-      - easypost-202305122104-29dd2d738a-master
+      - easypost-202305161731-3a88337a74-master
       x-xss-protection:
       - 1; mode=block
     status:
