--- a/tests/cassettes/test_referral_customer_all.yaml
+++ b/tests/cassettes/test_referral_customer_all.yaml
@@ -73,26 +73,27 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - b06a8e5564639738e2aac1fb001c796f
+      - 23bee7e06463d029e787d9a4003406fa
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb7nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - intlb2wdc a29e4ad05c
-      - extlb4wdc 5ab12a3ed2
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.158364'
+      - '0.151188'
       x-version-label:
-      - easypost-202305152249-750e1e7d95-master
+      - easypost-202305161817-392deb98e4-master
       x-xss-protection:
       - 1; mode=block
     status:
