--- a/tests/cassettes/test_referral_customer_update.yaml
+++ b/tests/cassettes/test_referral_customer_update.yaml
@@ -91,11 +91,11 @@ interactions:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '5655'
+      - '5654'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"834ca010c325c971c352617c1c28433b"
+      - W/"b6a373ba9757228293c75bf6b3006941"
       expires:
       - '0'
       pragma:
@@ -108,26 +108,27 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 79cc3dbb64639737e2aac1fa001fe001
+      - 23bee7e46463d028e787d9a3003406c3
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb4nuq
+      - bigweb7nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - intlb1wdc a29e4ad05c
-      - extlb3wdc 5ab12a3ed2
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.499590'
+      - '0.297082'
       x-version-label:
-      - easypost-202305152249-750e1e7d95-master
+      - easypost-202305161817-392deb98e4-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -181,21 +182,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 79cc3dbb64639737e2aac1fa001fe053
+      - 23bee7e46463d028e787d9a3003406df
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb12nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq a29e4ad05c
-      - intlb2wdc a29e4ad05c
-      - extlb3wdc 5ab12a3ed2
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.117815'
+      - '0.135119'
       x-version-label:
-      - easypost-202305152249-750e1e7d95-master
+      - easypost-202305161731-3a88337a74-master
       x-xss-protection:
       - 1; mode=block
     status:
