--- a/tests/cassettes/test_beta_referral_customer_add_payment_method.yaml
+++ b/tests/cassettes/test_beta_referral_customer_add_payment_method.yaml
@@ -44,28 +44,25 @@ interactions:
       - Origin
       x-backend:
       - easypost
-      x-canary:
-      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 477e8d7f64626273e786c9260019fe0e
+      - 23bee7e06463d025e787d99f003405b1
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb7nuq
+      - bigweb4nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - intlb2wdc a29e4ad05c
-      - extlb3wdc 5ab12a3ed2
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.135282'
+      - '0.048350'
       x-version-label:
-      - easypost-202305122104-29dd2d738a-master
+      - easypost-202305161731-3a88337a74-master
       x-xss-protection:
       - 1; mode=block
     status:
