--- a/tests/cassettes/test_referral_get_next_page.yaml
+++ b/tests/cassettes/test_referral_get_next_page.yaml
@@ -56,11 +56,11 @@ interactions:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '2858'
+      - '2854'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"57b616a535a9df8008e17cdd2be65c48"
+      - W/"87d4f1c9b4c89d23ec5e4ddf34cfae8e"
       expires:
       - '0'
       pragma:
@@ -78,20 +78,111 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 23bee7e56463d029e787d9a500340714
+      - e7025b8965417fa6e7798ae402602844
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb34nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq a29e4ad05c
-      - extlb2nuq 5ab12a3ed2
+      - intlb2nuq b3de2c47ef
+      - extlb2nuq 003ad9bca0
       x-runtime:
-      - '0.345269'
+      - '0.308643'
       x-version-label:
-      - easypost-202305161731-3a88337a74-master
+      - easypost-202310312106-bb7125dd9b-master
+      x-xss-protection:
+      - 1; mode=block
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - keep-alive
+      authorization:
+      - <REDACTED>
+      user-agent:
+      - <REDACTED>
+    method: GET
+    uri: https://api.easypost.com/v2/referral_customers?before_id=user_488e391395f4416196a31965fecac409&page_size=5
+  response:
+    body:
+      string: '{"has_more": false, "referral_customers": [{"id": "user_4a22730cdc844ce1bc2efbed999c869f",
+        "object": "User", "parent_id": null, "name": "test test", "phone_number":
+        "<REDACTED>", "verified": true, "created_at": "2022-04-29T19:35:33Z", "default_carbon_offset":
+        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "<REDACTED>", "children": []}, {"id": "user_fa93cc16bcc24c078ee057ce82f38eed",
+        "object": "User", "parent_id": null, "name": "test test", "phone_number":
+        "<REDACTED>", "verified": true, "created_at": "2022-04-28T22:34:38Z", "default_carbon_offset":
+        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "<REDACTED>", "children": []}, {"id": "user_35cb81fb8af1454dabf1f6afa7330634",
+        "object": "User", "parent_id": null, "name": "Firstname Lastname", "phone_number":
+        "<REDACTED>", "verified": true, "created_at": "2022-04-27T20:20:52Z", "default_carbon_offset":
+        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount": "100.00",
+        "recharge_threshold": "0.00", "has_billing_method": true, "cc_fee_rate": "0.0325",
+        "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum":
+        "0.25", "email": "<REDACTED>", "children": []}, {"id": "user_634b6daa05744bfaa205058f06864363",
+        "object": "User", "parent_id": null, "name": "Firstname Lastname", "phone_number":
+        "<REDACTED>", "verified": true, "created_at": "2022-04-26T15:50:28Z", "default_carbon_offset":
+        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "<REDACTED>", "children": []}]}'
+    headers:
+      cache-control:
+      - private, no-cache, no-store
+      content-length:
+      - '2281'
+      content-type:
+      - application/json; charset=utf-8
+      etag:
+      - W/"96f6bfd4815c1b4cb441150d0a156828"
+      expires:
+      - '0'
+      pragma:
+      - no-cache
+      referrer-policy:
+      - strict-origin-when-cross-origin
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains; preload
+      transfer-encoding:
+      - chunked
+      x-backend:
+      - easypost
+      x-content-type-options:
+      - nosniff
+      x-download-options:
+      - noopen
+      x-ep-request-uuid:
+      - e7025b8965417fa6e7798ae40260286e
+      x-frame-options:
+      - SAMEORIGIN
+      x-node:
+      - bigweb39nuq
+      x-permitted-cross-domain-policies:
+      - none
+      x-proxied:
+      - intlb2nuq b3de2c47ef
+      - extlb2nuq 003ad9bca0
+      x-runtime:
+      - '0.169410'
+      x-version-label:
+      - easypost-202310312106-bb7125dd9b-master
       x-xss-protection:
       - 1; mode=block
     status:
